[package]
name = "rust-kernel"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.3.2"
uefi-services = "0.1.0"
log = { version = "0.4.8", default-features = false }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
