[package]
name = "mythril"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"
build = "build.rs"

[dependencies]
uefi = "0.3.2"
uefi-services = "0.1.0"
x86_64 = "0.7.5"
log = { version = "0.4.8", default-features = false }
bitflags = "1.2.0"

[dependencies.num_enum]
version = "0.4.2"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
