[package]
name = "mythril"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"
build = "build.rs"

[dependencies]
derive-try-from-primitive = "0.1.0"
uefi = "0.3.2"
uefi-services = "0.1.0"
x86_64 = "0.7.5"
log = { version = "0.4.8", default-features = false }
bitflags = "1.2.0"
raw-cpuid = "7.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
