[package]
name = "mythril"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"

[features]
test = []

[dependencies]
arraydeque = { version = "0.4.5", default-features = false }
arrayvec = { version = "0.5.1", default-features = false }
bitflags = "1.2.0"
byteorder = { version = "1", default-features = false }
num_enum = { version = "0.5.0", default-features = false }
x86 = "0.34.0"
linked_list_allocator = "0.8.6"
log = { version = "0.4.8", default-features = false }
multiboot = "0.3.0"
multiboot2 = "0.9.0"
raw-cpuid = "8.1.1"
rlibc = "1.0.0"
serde = {version = "^1", default-features = false, features = ["alloc", "derive"] }
serde_json = {version = "^1", default-features = false, features = ["alloc"] }
spin = "0.5"
ux = { version = "0.1.3", default-features = false }
managed = { version = "0.8.0", features = ["map", "alloc"], default-features = false }

[dependencies.iced-x86]
version = "1.8.0"
default-features = false
features = ["no_std", "decoder"]

[build-dependencies]
nasm-rs = "0.1.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
