[package]
name = "mythril_efi"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"

[dependencies]
uefi = "0.3.2"
uefi-services = "0.1.0"
mythril_core = { version = "*", path = "../mythril_core" }
log = { version = "0.4.8", default-features = false }
x86 = "0.27.0"
