[package]
name = "mythril_efi"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"

[dependencies]
mythril_core = { version = "*", path = "../mythril_core" }
log = { version = "0.4.8", default-features = false }
spin = "0.5"
x86 = "0.27.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
tag = "0.1.21"
features = ["mem"]

[dependencies.uefi]
git = "https://github.com/ALSchwalm/uefi-rs.git"
branch = "mp-wait-event"

[dependencies.uefi-services]
git = "https://github.com/ALSchwalm/uefi-rs.git"
branch = "mp-wait-event"
