[package]
name = "mythril_multiboot2"
version = "0.1.0"
authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
repository = "https://github.com/ALSchwalm/mythril"
edition = "2018"
license-file = "LICENSE"
description = "A intel-focused hypervisor using VT-x/EPT"

[dependencies]
multiboot2 = "0.9.0"
mythril_core = { version = "*", path = "../mythril_core" }
log = { version = "0.4.8", default-features = false }
linked_list_allocator = "0.8.1"
spin = "0.5"
x86 = "0.27.0"

[build-dependencies]
nasm-rs = "0.1.7"